add company suggestions endpoint
