# earnings_release/request/yahoo.py
@@ -3,6 +3,7 @@ import requests_async as requests
 
 from earnings_release.dates.summary import Summary
 from earnings_release.requester import Requester
+from earnings_release.suggestions.company_info import CompanyInfo
 
 
 class YahooRequester(Requester):
@@ -42,11 +43,27 @@ class YahooRequester(Requester):
 
         response = await requests.post(url, headers=headers, data=payload)
 
-        summaries = []
         if response.status_code != 200:
-            return summaries
+            raise Exception('could not fetch data from yahoo finance API')
 
-        for row in response.json()["finance"]["result"][0]["documents"][0]["rows"]:
-            summaries.append(Summary.from_dict(row))
-
+        summaries = [Summary.from_dict(row) for row in response.json()["finance"]["result"][0]["documents"][0]["rows"]]
         return summaries
+
+    async def get_companies_suggestions(self, query: str) -> list[CompanyInfo]:
+        url = f"https://query2.finance.yahoo.com/v1/finance/search?q={query}&lang=en-US&region=US&newsCount=0&enableFuzzyQuery=false&quotesQueryId=tss_match_phrase_query&multiQuoteQueryId=multi_quote_single_token_query&enableCb=false&enableNavLinks=true&enableEnhancedTrivialQuery=true&enableCulturalAssets=true&researchReportsCount=2&corsDomain=finance.yahoo.com&listsCount=0"
+        headers = {
+            'Content-Type': 'application/json',
+            'User-Agent': ''
+        }
+        response = await requests.request("GET", url, headers=headers)
+        if response.status_code != 200:
+            raise Exception('could not fetch data from yahoo finance API')
+
+        company_info_suggestions = [CompanyInfo(row.get('symbol'),
+                                                row.get('shortname'),
+                                                row.get('exchDisp'),
+                                                row.get('sector'),
+                                                row.get('industry'),
+                                                row.get('typeDisp'))
+                                    for row in response.json()['quotes']]
+        return company_info_suggestions
